--- a/angular_mobx/example/counter/store/pubspec.yaml
+++ b/angular_mobx/example/counter/store/pubspec.yaml
@@ -9,3 +9,8 @@ dev_dependencies:
   build_runner: ^1.2.5
   mobx_codegen: ^0.0.7
 #  test: ^1.0.0
+dependency_overrides:
+  mobx:
+    path: ../../../../mobx
+  mobx_codegen:
+    path: ../../../../mobx_codegen
