--- a/angular_mobx/pubspec.yaml
+++ b/angular_mobx/pubspec.yaml
@@ -13,4 +13,12 @@ dependencies:
   angular: ^5.2.0
 dev_dependencies:
   pedantic: ^1.0.0
-  test: ^1.0.0
+  angular_test: ^2.2.0
+  build_runner: ^1.2.3
+  build_test: any
+  build_web_compilers: ^1.1.0
+  pageloader: ^3.0.0
+  test: ^1.5.3
+  mobx_codegen: ^0.0.8
+dependency_overrides:
+  analyzer: ^0.34.0
