--- a/angular_mobx_examples/angular_counter/pubspec.yaml
+++ b/angular_mobx_examples/angular_counter/pubspec.yaml
@@ -9,11 +9,12 @@ dependencies:
   angular_components: ^0.11.0
   mobx: ^0.0.37
   angular_mobx:
-    path: ../../../angular_mobx
-  store:
-    path: ../store
+    path: ../../angular_mobx
 dev_dependencies:
   angular_test: ^2.2.0
   build_runner: ^1.2.3
   build_web_compilers: ^1.1.0
+  mobx_codegen: ^0.0.8
   test: ^1.5.3
+dependency_overrides:
+  analyzer: ^0.34.0
